# ocrmyworkshopmanual

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  batch_compress.py  combine_manual.py  junk_finder.py  ocrmyworkshopmanual.example.toml  ocrmyworkshopmanual.py  pyproject.toml  recover_wayback.py  requirements.txt  scan_candidates.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
tests/: README.md  _util.py  conftest.py  extract_fixtures.py  make_blank_fixture.py  test_born_digital.py  test_classify.py  test_resilience.py  test_settings_matrix.py
tests/fixtures/: DIVERGENCES.md  manifest.json
tools/: jbig2enc-LICENSE.txt  jbig2topdf.py
